already simple styling

--- a/index.html
+++ b/index.html
@@ -4,11 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Birth Day Page</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p>Hello World!</p>
-    <p>ini perubahannya</p>
-    <p>ini juga</p>
+    <div class="container">
+        <img src="foto.png" alt="foto ulang tahun">
+        <div class="txt">
+            <h1>HAPPY BIRTHDAY</h1>
+            <p>Dear Friend,</p>
+            <p>On thins special day, i wanted to take a moment to celebrate you and all athe wonderfull qualities that make you so amazing. Your kindness, humor, and genuine heart bring so mch joy to everyone around you.</p>
+            <p>Wishing you a birthday as bright and beautiful as you are. Here's to many more wonderful years ahead!</p>
+            <p>With lots of love and warm wishes,</p>
+            <p>Ahmad Rian Hidayat</p>
+        </div>
+        <img class="stamp" src="birthday_stamp-removebg-preview.png" alt="">
+    </div>
 </body>
 </html>
